--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "軟體工程-線上夾娃娃機",
+    "name": "hj-quotation",
     "description": "",
     "repository": "https://github.com/gtalarico/django-vue-template",
     "keywords": ["django", "vue", "vuejs", "template", "django rest framework"],
