--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "three-onevent": "^1.1.2",
     "three-orbit-controls": "^82.1.0",
     "three-trackballcontrols-ts": "^0.2.3",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-axios": "^2.1.5",
+    "vue-esign": "^1.1.0",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
